# NavyaAIBlogs

./: .gitignore  README.md
embedding-rerank-gateway-high-performance/: Dockerfile  Idea.md  README.md  docker-compose.yml  requirements-bench.txt  requirements.txt
embedding-rerank-gateway-high-performance/blog/: blog.md
embedding-rerank-gateway-high-performance/docs/: CASE_STUDY.md  RUN_ON_GCP.md
embedding-rerank-gateway-high-performance/gateway_bench/: __init__.py  bench.py  service.py
embedding-rerank-gateway-high-performance/go-gateway/: Dockerfile  README.md  go.mod  main.go
embedding-rerank-gateway-high-performance/results/: GCP_BENCHMARK_RESULTS.md  GCP_GO_GATEWAY_RESULTS.md
embedding-rerank-gateway-high-performance/rust-gateway/: Cargo.toml  Dockerfile  README.md
embedding-rerank-gateway-high-performance/rust-gateway/model/: .gitkeep
embedding-rerank-gateway-high-performance/rust-gateway/src/: main.rs
embedding-rerank-gateway-high-performance/scripts/: export_onnx.py  run_benchmarks_gcp.sh
rag-pipelines-waste-cpu-modern-python/: Dockerfile  Idea.md  README.md  plot_314_comparison.py  plot_results.py  requirements.txt
rag-pipelines-waste-cpu-modern-python/blog/: blog.md
rag-pipelines-waste-cpu-modern-python/plots/: .gitkeep
rag-pipelines-waste-cpu-modern-python/rag_bench/: __init__.py  baseline_multiprocessing.py  baseline_threads.py  data_generation.py  embeddings.py  index.py  metrics.py  modern_interpreters.py  pipeline_base.py  runner.py
rag-pipelines-waste-cpu-modern-python/results/: .gitkeep  results.csv  results_314.csv  (+1 more)
