[package]
name = "embedding-gateway"
version = "0.1.0"
edition = "2021"
description = "Embedding + Rerank gateway with ONNX (all-MiniLM-L6-v2), same API as Python/Go"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
tokenizers = "0.19"
ndarray = "0.17"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
